@@ -17,6 +17,8 @@
  */
 package org.sqsh.commands;
 
+import static org.sqsh.options.ArgumentRequired.REQUIRED;
+
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.InputStream;
@@ -28,6 +30,7 @@ import org.sqsh.Session;
 import org.sqsh.SqshContext;
 import org.sqsh.SqshOptions;
 import org.sqsh.options.Argv;
+import org.sqsh.options.Option;
 
 /**
  * Implements the \eval command.
@@ -41,6 +44,11 @@ public class Eval
      */
     private static class Options
         extends SqshOptions {
+
+        @Option(
+            option='n', longOption="repeat", arg=REQUIRED, argName="count",
+            description="Repeates the query execution count times")
+        public int repeat = 1;
         
         @Argv(program="\\eval", min=1, max=1, usage="filename")
         public List<String> arguments = new ArrayList<String>();
@@ -76,30 +84,43 @@ public class Eval
         }
         
         SqshContext context = session.getContext();
+
+        for (int i = 0; i < options.repeat; i++) {
+
+            /*
+             * Just like the \go command we set a variable that the
+             * SQL in the session can refer to to know what iteration
+             * it is in.
+             */
+            if (options.repeat > 1) {
+
+                session.setVariable("iteration", Integer.toString(i));
+            }
         
-        /*
-         * Pay close attention, kiddies...first, we open our input file.
-         */
-        InputStream in = new FileInputStream(filename);
-        
-        /*
-         * Next, make the input of our session, this file. Note that we
-         * mark it as auto-close (the "true"). This will cause the session
-         * to close this descriptor after the command is finished executing
-         * and we mark it as non-interactive (the "false").
-         */
-        session.setIn(in, true, false);
-        
-        /*
-         * Now we will recurse back into the context and ask it to execute
-         * the contents of this session. This will return when the EOF
-         * is reached on the input stream.   Now, this sessin's input
-         * stream will still be set to be the file we opened, but we
-         * don't really need to worry about that as the default behavior
-         * of the session is to restore all input/output streams to the
-         * original state after the execution of every command.
-         */
-        context.run(session);
+            /*
+             * Pay close attention, kiddies...first, we open our input file.
+             */
+            InputStream in = new FileInputStream(filename);
+            
+            /*
+             * Next, make the input of our session, this file. Note that we
+             * mark it as auto-close (the "true"). This will cause the session
+             * to close this descriptor after the command is finished executing
+             * and we mark it as non-interactive (the "false").
+             */
+            session.setIn(in, true, false);
+            
+            /*
+             * Now we will recurse back into the context and ask it to execute
+             * the contents of this session. This will return when the EOF
+             * is reached on the input stream.   Now, this sessin's input
+             * stream will still be set to be the file we opened, but we
+             * don't really need to worry about that as the default behavior
+             * of the session is to restore all input/output streams to the
+             * original state after the execution of every command.
+             */
+            context.run(session);
+        }
         
         return 0;
     }
